[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/GUI/BackToMainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/SW_back_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/GUI/Gotocharselect.gd" type="Script" id=3]
[ext_resource path="res://Resources/Main GUI Images/Map/Hard.jpg" type="Texture" id=4]
[ext_resource path="res://Resources/fonts/chary_40.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/fonts/arcade_40.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/fonts/chary_28_dialog_title.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resources/fonts/arcade_34_SW_Buttons.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/GUI/DecodeMaze.gd" type="Script" id=9]
[ext_resource path="res://Resources/Main GUI Images/BG/bg2_darker_maroon.png" type="Texture" id=10]
[ext_resource path="res://Resources/Button Styles/main_menu_button_pressed.tres" type="StyleBox" id=11]
[ext_resource path="res://Resources/Button Styles/main_menu_button_normal.tres" type="StyleBox" id=12]
[ext_resource path="res://Resources/Button Styles/main_menu_button_hover.tres" type="StyleBox" id=13]
[ext_resource path="res://Resources/Button Styles/window_dialog_normal.tres" type="StyleBox" id=14]
[ext_resource path="res://Resources/Button Styles/window_dialog_pressed.tres" type="StyleBox" id=15]
[ext_resource path="res://Resources/Button Styles/window_dialog_hover.tres" type="StyleBox" id=16]
[ext_resource path="res://Resources/window_dialog_maroon.tres" type="StyleBox" id=17]
[ext_resource path="res://Resources/LineEdit Styles/line_edit_normal.tres" type="StyleBox" id=18]
[ext_resource path="res://Resources/Main GUI Images/Map/custom.jpg" type="Texture" id=19]
[ext_resource path="res://Resources/Main GUI Images/Map/Med.jpg" type="Texture" id=20]
[ext_resource path="res://Resources/fonts/arcade_61_SW_title.tres" type="DynamicFont" id=21]
[ext_resource path="res://Resources/fonts/arcade_45_SW_back.tres" type="DynamicFont" id=22]

[node name="SelectWorldScene" type="Control"]
margin_left = 1.33484
margin_right = 1281.33
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 849.933, 365.659 )
scale = Vector2( 1.35367, 1.29755 )
texture = ExtResource( 10 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.68176
margin_top = 178.319
margin_right = -1.67688
margin_bottom = -139.681
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -590.407
margin_top = 95.9391
margin_right = 601.593
margin_bottom = 158.939
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "SELECT  A   WORLD  TO  BEGIN  YOUR  ADVENTURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SWBackButton" type="Button" parent="."]
margin_left = 552.326
margin_top = 611.409
margin_right = 732.326
margin_bottom = 655.409
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "back"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -110.0
margin_right = -57.9951
margin_bottom = 190.0
rect_min_size = Vector2( 0, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 1172.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World1_Container" type="VBoxContainer" parent="MarginContainer/WorldContainer"]
margin_right = 377.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sample_map" type="TextureRect" parent="MarginContainer/WorldContainer/World1_Container"]
margin_right = 377.0
margin_bottom = 236.0
size_flags_vertical = 3
texture = ExtResource( 20 )
expand = true

[node name="World1Button2" type="Button" parent="MarginContainer/WorldContainer/World1_Container"]
light_mask = -2147483647
margin_top = 256.0
margin_right = 377.0
margin_bottom = 300.0
size_flags_horizontal = 5
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "World 1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World2_Container" type="VBoxContainer" parent="MarginContainer/WorldContainer"]
margin_left = 397.0
margin_right = 774.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sample_map2" type="TextureRect" parent="MarginContainer/WorldContainer/World2_Container"]
margin_right = 377.0
margin_bottom = 236.0
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="World2Button" type="Button" parent="MarginContainer/WorldContainer/World2_Container"]
margin_top = 256.0
margin_right = 377.0
margin_bottom = 300.0
size_flags_horizontal = 7
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "World 2"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendMaze_Container" type="VBoxContainer" parent="MarginContainer/WorldContainer"]
margin_left = 794.0
margin_right = 1171.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sample_map3" type="TextureRect" parent="MarginContainer/WorldContainer/FriendMaze_Container"]
margin_right = 377.0
margin_bottom = 236.0
size_flags_vertical = 3
texture = ExtResource( 19 )
expand = true
stretch_mode = 1

[node name="FriendMaze" type="Button" parent="MarginContainer/WorldContainer/FriendMaze_Container"]
margin_top = 256.0
margin_right = 377.0
margin_bottom = 300.0
size_flags_horizontal = 7
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Custom    Maze"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_top = 145.272
margin_right = -280.0
margin_bottom = -194.728
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/title_font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -11.9951
margin_bottom = -14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupLabel" type="Label" parent="WindowDialog/VBoxContainer"]
margin_top = 103.0
margin_right = 628.0
margin_bottom = 143.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserCode" type="LineEdit" parent="WindowDialog/VBoxContainer"]
margin_top = 256.0
margin_right = 628.0
margin_bottom = 306.0
rect_min_size = Vector2( 600, 50 )
custom_styles/normal = ExtResource( 18 )
custom_fonts/font = ExtResource( 5 )
custom_colors/selection_color = Color( 1, 0.623529, 0.623529, 1 )
custom_colors/font_color_selected = Color( 0.290196, 0.0196078, 0.0196078, 0.996078 )
custom_colors/font_color = Color( 1, 0.623529, 0.623529, 1 )
align = 1
max_length = 18
clear_button_enabled = true
placeholder_text = "ENTER CODE HERE"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/VBoxContainer"]
margin_top = 316.0
margin_right = 628.0
margin_bottom = 365.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="SWAlertCancelButton" type="Button" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_right = 309.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.0470588, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.25098, 0.14902, 0.0313726, 1 )
text = "CANCEL"
script = ExtResource( 9 )

[node name="ConfirmButton" type="Button" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 319.0
margin_right = 628.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.0470588, 0.156863, 1 )
custom_colors/font_color_pressed = Color( 0.25098, 0.14902, 0.0313726, 1 )
text = "confirm"
script = ExtResource( 9 )
[connection signal="pressed" from="SWBackButton" to="SWBackButton" method="_on_SWBackButton_pressed"]
[connection signal="pressed" from="MarginContainer/WorldContainer/World1_Container/World1Button2" to="MarginContainer/WorldContainer/World1_Container/World1Button2" method="_on_World1Button_pressed"]
[connection signal="pressed" from="MarginContainer/WorldContainer/World2_Container/World2Button" to="MarginContainer/WorldContainer/World2_Container/World2Button" method="_on_World2Button_pressed"]
[connection signal="pressed" from="MarginContainer/WorldContainer/FriendMaze_Container/FriendMaze" to="MarginContainer/WorldContainer/FriendMaze_Container/FriendMaze" method="_on_FriendMaze_pressed"]
[connection signal="draw" from="WindowDialog" to="WindowDialog/VBoxContainer/HBoxContainer/ConfirmButton" method="_on_WindowDialog_draw"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/HBoxContainer/SWAlertCancelButton" to="WindowDialog/VBoxContainer/HBoxContainer/SWAlertCancelButton" method="_on_SWAlertCancelButton_pressed"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/HBoxContainer/ConfirmButton" to="WindowDialog/VBoxContainer/HBoxContainer/ConfirmButton" method="_on_ConfirmButton_pressed"]
